# privacy-map

./: .gitignore  LICENSE  README.md  demo.sh  pyproject.toml
config/: apps-local.yaml  apps.yaml  config-local.yaml  config.yaml  custom_detectors.yaml
data/documents/: internal_memo.md
data/prompt_logs/: chat_session_001.jsonl
demo/: apps.yaml  config.yaml
demo/sample_data/documents/: api_integration_notes.md  hr_onboarding.md  legal_memo.md
demo/sample_data/prompt_logs/: chatbot_session_001.jsonl  chatbot_session_002.jsonl
demo/sample_data/training/: fine_tune_dataset.jsonl
docs/: architecture.md  configuration.md  detectors.md  scoring.md
src/aipbom/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/aipbom/connectors/: __init__.py  base.py  filesystem.py  pgvector.py  postgres.py
src/aipbom/detectors/: __init__.py  base.py  custom.py  pii.py  secrets.py  sensitivity.py
src/aipbom/mapping/: __init__.py  app_mapper.py
src/aipbom/models/: __init__.py  application.py  asset.py  finding.py  risk.py
src/aipbom/output/: __init__.py  json_writer.py  report.py
src/aipbom/scoring/: __init__.py  engine.py
tests/: test_config.py  test_models.py  test_scoring.py
tests/test_connectors/: __init__.py
tests/test_detectors/: test_custom.py  test_pii.py  test_secrets.py  test_sensitivity.py
